# strategy-lab

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  pyproject.toml
scripts/: setup_dev_env.sh
strategy_lab/: config.py
strategy_lab/backtest/: metrics.py  runner.py
strategy_lab/data/: loader.py
strategy_lab/execution/: base_trader.py  example_trader.py
strategy_lab/plotting/: __init__.py  charts.py
strategy_lab/scripts/: batch_export_metadata.py  build_calendar.py  build_calendar_db.py  build_metadata.py  export_metadata_by_date.py  get_us_etfs.py  plot_stock.py  update_parquet.py
strategy_lab/selection/: base_selector.py  config.json  example_selector.py  indicator_calculator.py  jl_pivotal_points.py  selection_flow.md  support_resistance.py
strategy_lab/strategies/: __init__.py  base.py
strategy_lab/tests/: test_data_load_performance.py  test_eod_data_load_performance.py  test_example_selector.py  test_example_trader.py  test_load_data.py  test_loader.py  test_metrics.py  test_plot_stock.py  test_plotting.py  test_runner.py  test_support_resistance.py
strategy_lab/utils/: adjuster.py  logger.py  trading_calendar.py
