[tool.poetry]
name = "strategy-lab"
version = "0.1.0"
description = "Backtesting and strategy research framework"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
polars = "^1.30.0"
asyncpg = "^0.30.0"
holidays = "^0.73"
tqdm = "^4.66.1"
GitPython = "^3.1.44"
numpy = "^2.2.6"
matplotlib = "^3.8"
mplfinance = "^0.12.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.11.11"
pre-commit = "^4.2.0"
detect-secrets = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "8.3.5"
addopts = "-ra -q"
python_files = "tests/test_*.py"
python_classes = "Test*"
python_functions = "test_*"
