[tool.poetry]
name = "strategy-lab"
version = "0.1.0"
description = "Backtesting and strategy research framework"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
polars = "^1.34.0"
asyncpg = "^0.30.0"
holidays = "^0.82"
tqdm = "^4.66.1"
GitPython = "^3.1.44"
numpy = "^2.3.3"
matplotlib = "^3.10.7"
mplfinance = "^0.12.10b0"
pyarrow = "^21.0.0"
pandas_market_calendars = "^5.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
ruff = "^0.14.0"
pre-commit = "^4.3.0"
detect-secrets = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "8.3.5"
addopts = "-ra -q"
python_files = "tests/test_*.py"
python_classes = "Test*"
python_functions = "test_*"
